2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	Increase the backlog for the listen() call to allow more incoming
	network connections.

2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m: Remove excess release pointed out by
	Sergey Golovin (bug 31168)

2010-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: restore standardisation of header name
	lost in last optimisation.  Fixes bug #31166

2010-09-28  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/objc-load.m: Don't include objc-list with libobjc2

2010-09-28  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSFFIInvocation.m: Remove dead code
	(gs_find_by_receiver_best_typed_sel was static inline and never
	called anywhere)

2010-09-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: implement lowercaseString and uppercaseString
	for improved performance.
	* Source/Additions/GSMime.m: optimise header searches

2010-09-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimer.m: ([-fire]) make firing more robust by retaining
	the target so it cannot be deallocated while we are performing a
	method on it.  Do nothing if timer is already invalidated.

2010-09-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCharacterSet.m: Build using the faster but more memory
	hungry implementation.  Add comments to say why we are doing so.

2010-09-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/ObjectiveC2/runtime.c (method_getImplementation,
	method_getName): Fix unchecked pointer dereferences, which could
	cause crashes when attempting to invoke a selector which is not
	implemented by the target.

2010-09-19  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Additions/GNUstepBase/preface.h.in:
	Added standard C headers included by CoreFoundation.h. 

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSBundle.m (+bundleForLibrary:version:): Use proper